# Monopoly

./: README.md
hoardingCpp/: CMakeLists.txt  DiceRoll.cpp  DiceValues.txt  GameEnd.cpp  Gamestate.cpp  HousesHotel.cpp  Makefile  MonopolyBoard.csv  MonpolyRules.txt  Player.cpp  Player.h  README.md  SpaceX.cpp  SpaceX.h  main.cpp  readRules.cpp  readRules.h
